--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "mehdi-fathi/eloquent-filter": "^3.4",
         "midtrans/midtrans-php": "^2.5",
         "ovac/idoc": "^1.6",
+        "ramsey/uuid": "^4.7",
         "yoeunes/toastr": "^2.3"
     },
     "require-dev": {
